k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: OpsSentinal
  labels:
    name: OpsSentinal
    app: OpsSentinal
